Fixed label not showing correctly

--- a/src/components/PieChart/PieChart.scss
+++ b/src/components/PieChart/PieChart.scss
@@ -52,7 +52,7 @@ $normal: #657386 ;
         }
     }
 
-    .arc {
+    .arc-text {
         .percentage-label {
             font-family: 'Segoe UI';
             fill: white;
